# jros2client

./: DEVELOPMENT.md  README.md  build.gradle  gradle.properties  settings.gradle
android/: build.gradle  gradle.properties
jros2client/: README-sources.txt  build.gradle
jros2client.examples/: README.md  build.gradle
jros2client.examples/diagnostics_otel/: build.gradle
jros2client.examples/generic/: build.gradle  gradle.properties
jros2client.examples/generic/src/: CharMessageSubscriberApp.java  ImagesSubscriberApp.java  PolygonApp.java  PublisherApp.java  PublisherSubscriberApp.java  SubscriberApp.java
jros2client.examples/jros2droid/: AndroidManifest.xml  README.md  build.gradle  ic_launcher.xcf  proguard.cfg  settings.gradle
jros2client.examples/jros2droid/res/layout/: activity_main.xml  item.xml
jros2client.examples/jros2droid/res/values/: strings.xml
jros2client.examples/src/: ImagesSubscriberApp.java  PolygonApp.java
jros2client.examples/ws2/: .gitignore  README.md
jros2client.examples/ws2/src/custom_msgs/: CMakeLists.txt  README.md  package.xml
jros2client.tests/: README.md  build.gradle
jros2client.tests/src/test/java/: module-info.java
jros2client.tests/src/test/resources/: jros2client-test-logging.properties  test_publish_happy
jros2client/release/: CHANGELOG.md
jros2client/src/: jros2client
jros2client/src/main/java/: module-info.java
jros2client/src/main/resources/: jros2client-debug.properties  jros2client-info.properties  jrosclient-README.md  (+2 more)
publish/: build.gradle  gradle.properties  settings.gradle
(+55 files in other folders)
